--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,7 @@ testpath==0.4.4
 toml==0.10.2
 toolz==0.11.1
 tornado==6.1
+tqdm==4.47.0
 traitlets==4.3.3
 typing-extensions==3.7.4.3
 tzlocal==2.1
